--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,8 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
+
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -38,10 +40,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 //islamic date
     implementation 'com.ibm.icu:icu4j:69.1'
-
+    def multidex_version = "2.0.1"
+    implementation "androidx.multidex:multidex:$multidex_version"
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.code.gson:gson:2.8.9'
-
+    implementation "androidx.multidex:multidex:2.0.1"
     implementation 'com.google.firebase:protolite-well-known-types:18.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
